# loop-symphony

./: .gitignore  AGENT_SOCIAL_LAYER_PLAN.md  BUILD_PHASES.md  Dockerfile  IOS_INTEGRATION_GUIDE.md  railway.toml
conductors/: __init__.py  base.py  models.py  pyproject.toml
conductors/reference/: __init__.py  general_conductor.py
dispatch_client/: __init__.py  client.py  models.py  pyproject.toml
local/: pyproject.toml
local/src/local_room/: __init__.py  config.py  knowledge_cache.py  learning_reporter.py  main.py  privacy.py  room.py  router.py
local/src/local_room/api/: __init__.py  routes.py
local/src/local_room/instruments/: __init__.py  note.py
local/src/local_room/tools/: __init__.py  base.py  ollama.py
local/tests/: __init__.py  test_knowledge_sync.py  test_local_room.py  test_privacy_router.py
loop_library/: README.md  __init__.py  exceptions.py  pyproject.toml
loop_library/compositions/: __init__.py  helpers.py  parallel.py  sequential.py
loop_library/execution/: __init__.py  loop_executor.py  loop_proposer.py
loop_library/instruments/: __init__.py  base.py  falcon.py  note.py  research.py  synthesis.py  vision.py
loop_library/instruments/magenta/: __init__.py  composition.py  diagnose.py  ingest.py  prescribe.py  report.py  track.py
loop_library/models/: __init__.py  arrangement.py  finding.py  instrument_config.py  intent.py  loop_proposal.py  outcome.py  task.py
loop_library/symphonies/: __init__.py  magenta.py
loop_library/termination/: __init__.py  evaluator.py
loop_library/tools/: __init__.py  base.py  claude.py  registry.py  tavily.py
server/: .dockerignore  .env.example  Dockerfile  pyproject.toml
server/src/loop_symphony/: __init__.py  config.py  exceptions.py  main.py
server/src/loop_symphony/api/: __init__.py  auth.py  events.py  routes.py
server/src/loop_symphony/db/: __init__.py  client.py  schema.sql
server/src/loop_symphony/instruments/: __init__.py  base.py  falcon.py  note.py  research.py  synthesis.py  vision.py
server/src/loop_symphony/manager/: __init__.py  arrangement_planner.py  (+18 more)
server/tests/: __init__.py  conftest.py  test_arrangement.py  test_auth.py  test_autonomic.py  test_checkpoints.py  test_claude.py  test_compactor.py  test_composition.py  test_composition_parallel.py  test_conductor.py  test_conductor_registry.py  test_cross_room_composition.py  test_error_learning.py  test_graceful_degradation.py  test_heartbeat.py  test_instrument_protocol.py  test_intent.py  test_interventions.py  test_knowledge.py  test_knowledge_sync.py  test_librarian.py  test_loop_proposal.py  test_magenta_composition.py  test_magenta_diagnose.py  test_magenta_ingest.py  test_magenta_prescribe.py  test_magenta_report.py  test_magenta_track.py  test_meta_learning.py  test_note.py  test_notifications.py  test_privacy_classifier.py  test_process_types.py  test_research.py  test_room_client.py  test_room_registry.py  test_room_routing.py  test_routes_registry.py  test_spawn.py  (+8 more)
(+65 files in other folders)
