[project]
name = "conductors"
version = "0.1.0"
description = "Conductor interface and reference implementations for Loop Symphony"
requires-python = ">=3.11"
dependencies = [
    "loop-library",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["conductors"]
