[project]
name = "dispatch-client"
version = "0.1.0"
description = "Communication interface for the Dispatch system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dispatch_client"]
