[project]
name = "loop-library"
version = "0.1.0"
description = "Pure loop methodology — instruments, compositions, and execution"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "anthropic>=0.18.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
research = [
    "tavily-python>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loop_library"]

[tool.ruff]
line-length = 100
target-version = "py311"
